Ajustes
Resolvendo alguns endpoints, e finalizando o backend.
