# backend/api/models/vendas.js
@@ -3,7 +3,7 @@ const {
   Model
 } = require('sequelize');
 module.exports = (sequelize, DataTypes) => {
-  class Produtos extends Model {
+  class Vendas extends Model {
     /**
      * Helper method for defining associations.
      * This method is not a part of Sequelize lifecycle.
@@ -11,15 +11,31 @@ module.exports = (sequelize, DataTypes) => {
      */
     static associate(models) {
       // define association here
-      Produtos.hasMany(models.Vendas, {
+      Vendas.belongsTo(models.Produtos, {
         foreignKey: 'fk_produtos'
+      }),
+      Vendas.belongsTo(models.Clientes, {
+        foreignKey: 'fk_clientes'
       })
     }
   }
-  Produtos.init({
+  Vendas.init({
 
-    nomeProd:{
-      type: DataTypes.STRING,
+    fk_clientes:{
+      type: DataTypes.INTEGER,
+      allowNull: false,
+      validate: {
+        notNull: {
+          msg: 'Campo Cliente não pode ser nullo.'
+        },
+        notEmpty: {
+          msg:'Campo Cliente não pode ser vazio.'
+        }
+      },
+    },
+
+    fk_produtos:{
+      type: DataTypes.INTEGER,
       allowNull: false,
       validate: {
         notNull: {
@@ -31,51 +47,29 @@ module.exports = (sequelize, DataTypes) => {
       },
     },
 
-    preco:{
-      type: DataTypes.DOUBLE,
+    quantidade:{
+      type: DataTypes.INTEGER,
       allowNull: false,
       validate: {
+        isInt: {
+          args: true,
+          msg: 'Campo Quantidade somente números inteiro.'
+        },
         notNull: {
-          msg: 'Campo Preço não pode ser nullo.'
+          msg: 'Campo Quantidade não pode ser nullo.'
         },
         notEmpty: {
-          msg:'Campo Preço não pode ser vazio.'
+          msg:'Campo Quantidade não pode ser vazio.'
         }
       },
     },
-
-    valorPromocao:{
-      type: DataTypes.DOUBLE,
-      allowNull: false,
-      validate: {
-        notNull: {
-          msg: 'Campo Valor Promocional não pode ser nullo.'
-        },
-        notEmpty: {
-          msg:'Campo Valor Promocional não pode ser vazio.'
-        }
-      },
-    },
-
-    descricao:{
-      type: DataTypes.TEXT,
-      allowNull: false,
-      validate: {
-        notNull: {
-          msg: 'Campo Descrição não pode ser nullo.'
-        },
-        notEmpty: {
-          msg:'Campo Descrição não pode ser vazio.'
-        }
-      },
-    },
-
+    dataVenda: DataTypes.DATEONLY,
   }, {
     sequelize,
-    modelName: 'Produtos',
+    modelName: 'Vendas',
     freezeTableName: true,
     createdAt: false,
     updatedAt: false
   });
-  return Produtos;
+  return Vendas;
 };
