# backend/api/routes/clientesRoute.js
@@ -3,9 +3,11 @@ const ClientesController = require('../controllers/ClientesController')
 
 
 const router = Router()
-
-router.get('/api/clientes', ClientesController.read)
-router.post('/api/clientes', ClientesController.create)  
-router.delete('/api/clientes/:id', ClientesController.delete)
+router
+    .get('/api/clientes', ClientesController.read)
+    .get('/api/clientes/:id', ClientesController.readOne)
+    .post('/api/clientes', ClientesController.create)  
+    .delete('/api/clientes/:id', ClientesController.delete)
+    .put('/api/clientes/:id', ClientesController.update)  
 
 module.exports = router
