# backend/api/routes/index.js
@@ -1,12 +1,13 @@
 const express = require('express')
-
 const clientes = require('./clientesRoute')
 const produtos = require('./produtosRoute')
+const vendas = require('./vendasRoute')
 const cors = require('cors');
 
 // gerar documentacao
-  //  app.use('/', clientes);
-  //  app.use('/', produtos);
+  // app.use('/', clientes);
+  // app.use('/', produtos);
+  // app.use('/', vendas);
    
 
 module.exports = app => {
@@ -14,6 +15,7 @@ module.exports = app => {
     cors(),
     express.json(),
     clientes,
-    produtos
+    produtos,
+    vendas
   )
 }
