# backend/api/routes/produtosRoute.js
@@ -3,9 +3,11 @@ const ProdutosController = require('../controllers/ProdutosController')
 
 
 const router = Router()
-
-router.get('/api/produtos', ProdutosController.read)
-router.post('/api/produtos', ProdutosController.create)  
-router.delete('/api/produtos/:id', ProdutosController.delete)
+router
+    .get('/api/produtos', ProdutosController.read)
+    .get('/api/produtos/:id', ProdutosController.readOne)
+    .post('/api/produtos', ProdutosController.create)  
+    .delete('/api/produtos/:id', ProdutosController.delete)
+    .put('/api/produtos/:id', ProdutosController.update)
 
 module.exports = router
